# vuanem-hapi

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
db/: bigquery.py
hapi/: hapi_controller.py  hapi_repo.py  hapi_service.py
hapi/hapi/: __init__.py  campaign_list.py  interface.py  message_list.py  upload_list.py  utils.py
tasks/: cloud_tasks.py  tasks_service.py
test/: test_unit.py
